@@ -290,7 +290,6 @@
     <Compile Include="MonoDevelop.CSharp.Completion\CompletionTextLinkMode.cs" />
     <Compile Include="MonoDevelop.CSharp.Refactoring\CSharpCodeGenerator.cs" />
     <Compile Include="MonoDevelop.CSharp.Refactoring\CSharpRefactorer.cs" />
-    <Compile Include="MonoDevelop.CSharp.Completion\DropDownBoxListWindow.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="ChangeLog" />
